bee-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bee-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
      - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bee-a
spec:
  hosts:
  - "*"
  gateways:
  - bee-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: currency-a-service
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bee-b
spec:
  hosts:
  - b.beecurrency.com
  gateways:
  - bee-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: currency-b-service
        port:
          number: 7878
