bee-tls-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bee-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - a.secure.beecurrency.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bee
spec:
  hosts:
  - a.secure.beecurrency.com
  gateways:
  - bee-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: currency-a-service
        port:
          number: 8080
